Fixed issue with icons on firefox and changed body font color and size

--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ html {
 body {
   font-family: 'Mulish', sans-serif;
   font-weight: 400;
-  font-size: var(--fs-400);
-  color: #374151;
+  font-size: var(--fs-500);
+  color: #666;
   line-height: 1.8;
   background-color: #f3f3f3;
 }
@@ -143,7 +143,7 @@ h5 {
 }
 
 p {
-  color: #1e293b;
+  color: #666;
 }
 
 img {
@@ -254,7 +254,7 @@ img {
     url(/img/header-img.jpg);
   background-size: cover;
   /* padding: 0 3rem; */
-  height: 95vh;
+  height: 100vh;
 }
 
 .header__title {
@@ -265,7 +265,7 @@ img {
 }
 
 .header__subheading {
-  color: #030712;
+  color: #343a40;
   font-size: var(--fs-700);
   font-weight: 400;
   margin-bottom: 2.4rem;
@@ -336,7 +336,7 @@ h4 {
 }
 
 .features__header {
-  font-size: var(--fs-600);
+  font-size: var(--fs-700);
   margin-bottom: 1rem;
 }
 
